Progress before the end of the hour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,24 @@
 .header{
     padding: 10px;
     background-color: white;
+
+}
+
+.header h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+.header nav{
+    padding: 10px;
+    float: right;
+}
+
+.header nav ul {
+    list-style-type: none;
+}
+
+.header nav ul li {
+    display: inline-block;
+    margin-left: 25px;
 }
